--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,94 @@
-# # pytorch==2.2.2
-# # torchvision==0.17.2
-# # torchaudio==2.2.2
-# pytorch-cuda==12.1
-pytorch-lightning==2.4.0
-torchio==0.20.1
-monai==1.4.0
-pandas==2.2.3
-numpy==1.26.4
-tqdm==4.67.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.13
+aiosignal==1.4.0
+annotated-types==0.7.0
+async-timeout==5.0.1
+attrs==25.3.0
+certifi==2025.6.15
+charset-normalizer==3.4.2
+click==8.2.1
+colorama==0.4.6
+contourpy==1.3.2
+coral-pytorch==1.4.0
+cycler==0.12.1
+datasets==3.6.0
+deprecated==1.2.18
+dill==0.3.8
+einops==0.8.1
+einx==0.3.0
+et-xmlfile==2.0.0
+filelock==3.18.0
+fonttools==4.58.5
+frozendict==2.4.6
+frozenlist==1.7.0
+fsspec==2025.3.0
+gitdb==4.0.12
+gitpython==3.1.44
+huggingface-hub==0.33.2
+humanize==4.12.3
+idna==3.10
+importlib-resources==6.5.2
+jinja2==3.1.6
+joblib==1.5.1
+kiwisolver==1.4.8
+lightning==2.5.2
+lightning-utilities==0.14.3
+loguru==0.7.3
+markdown-it-py==3.0.0
+markupsafe==3.0.2
+matplotlib==3.10.3
+mdurl==0.1.2
+monai==1.5.0
+mpmath==1.3.0
+multidict==6.6.3
+multiprocess==0.70.16
+networkx==3.4.2
+nibabel==5.3.2
+numpy==2.2.6
 openpyxl==3.1.5
-scikit-learn==1.5.2
-matplotlib==3.9.2
-seaborn==0.13.2
-wandb==0.18.6
-einops==0.8.0
+packaging==25.0
+pandas==2.3.0
+pillow==11.3.0
+platformdirs==4.3.8
+propcache==0.3.2
+protobuf==6.31.1
+pyarrow==20.0.0
+pydantic==2.11.7
+pydantic-core==2.33.2
 pydicom==3.0.1
-huggingface_hub==0.29.3
-datasets==3.4.1
-coral_pytorch==1.4.0
--e . 
+pygments==2.19.2
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+pytorch-lightning==2.5.2
+pytz==2025.2
+pyyaml==6.0.2
+requests==2.32.4
+rich==14.0.0
+scikit-learn==1.7.0
+scipy==1.15.3
+seaborn==0.13.2
+sentry-sdk==2.32.0
+setuptools==80.9.0
+shellingham==1.5.4
+simpleitk==2.5.2
+six==1.17.0
+smmap==5.0.2
+sympy==1.13.1
+threadpoolctl==3.6.0
+torch==2.5.1+cu118
+torchaudio==2.5.1+cu118
+torchio==0.19.0
+torchmetrics==1.7.3
+torchvision==0.20.1+cu118
+tqdm==4.67.1
+typer==0.16.0
+typing-extensions==4.12.2
+typing-inspection==0.4.1
+tzdata==2025.2
+urllib3==2.5.0
+wandb==0.21.0
+win32-setctime==1.2.0
+wrapt==1.17.2
+x-transformers==2.4.9
+xxhash==3.5.0
+yarl==1.20.1
